# SmartGateway

./: .gitignore  CMakeLists.txt
include/: CpuSensor.h  EepromStorage.h  LightSensor.h  gui.h
src/: CpuSensor.cpp  EepromStorage.cpp  LightSensor.cpp  fb_test.cpp  gui.cpp  main.cpp  main_ui.cpp
